src/snapshots/gfroerli_bot__handler__tests__resolve_single_sensor__no_match.snap
---
source: src/handler.rs
expression: err
---
No sensor found matching "nonexistent".

Use /sensors to list all available sensors.
